Refactor core modules and harden Arrow status handling